Moved SbeLogPrinter